--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
