chore: update lint-staged configuration for src/

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,4 @@
 {
-  "src/**/*": [
-    "npm run lint --fix"
-  ]
+  "src/**/*.{js,jsx,ts,tsx}": ["npm run lint --fix"],
+  "*.{json,css,scss,md}": ["prettier --write"]
 }
