--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.6.5",
     "eslint-config-next": "13.4.19",
+    "extract-colors": "^4.0.4",
+    "get-pixels": "^3.3.3",
     "next": "13.4.19",
     "next-auth": "^4.24.5",
     "postcss": "8.4.29",
@@ -26,6 +28,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@types/get-pixels": "^3.3.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
