--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.5",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.2.3",
     "extract-colors": "^4.0.4",
     "get-pixels": "^3.3.3",
-    "next": "13.4.19",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
     "swiper": "^11.0.5",
     "tailwindcss": "3.3.3"
