--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.6.5",
     "eslint-config-next": "^14.2.3",
     "extract-colors": "^4.0.4",
-    "get-pixels": "^3.3.3",
+    "jimp": "^0.22.12",
     "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "postcss": "8.4.29",
